finishing up phase1, phase_report made

--- a/phase1/configs/multisenge_default.yaml
+++ b/phase1/configs/multisenge_default.yaml
@@ -21,6 +21,7 @@ ds:
   rank_r: 6
   variance_threshold: null
   use_randomized_pca: true
+  subspace_variant: residual
   window:
     enabled: true
     size: 64
